--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/springhibernate?useSSL=false&autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8
-    username: root
-    password: password
+    url: S{MYSQL_HOST:jdbc:mysql://localhost:3306/springhibernate?useSSL=false&autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8}
+    username: ${MYSQL_USER:root}
+    password: ${MYSQL_ROOT_PASSWORD:password}
   jpa:
     database: MYSQL
     showSql: true
